--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
@@ -11,6 +11,9 @@
     <style type="text/tailwindcss">
       @theme {
         --color-clifford: #da373d;
+      }
+      p {
+        @apply text-start;
       }
       svg {
         @apply w-[150px] bg-pink-100 bg-pink-100 p-5 aspect-square rounded-full text-rose-500;
@@ -24,21 +27,23 @@
     <div
       class="flex justify-center items-center flex-col gap-10 bg-white max-w-4xl mx-auto border-rose-300 border-5 rounded-3xl p-5 w-full lg:min-w-3xl h-[70vh] font-medium text-gray-800 text-3xl">
       <div class="imgBox">
-        <svg viewBox="0 -960 960 960" fill="currentColor">
+        <svg id="trigger" viewBox="0 -960 960 960" fill="currentColor">
           <path
+            class="hearing hidden"
+            d="M280-80q62 0 101.5-31t60.5-91q17-50 32.5-70t71.5-64q62-50 98-113t36-151q0-119-80.5-199.5T400-880q-119 0-199.5 80.5T120-600h80q0-85 57.5-142.5T400-800q85 0 142.5 57.5T600-600q0 68-27 116t-77 86q-52 38-81 74t-43 78q-14 44-33.5 65T280-160q-33 0-56.5-23.5T200-240h-80q0 66 47 113t113 47Zm432-210q59-60 93.5-139.5T840-600q0-92-34.5-172T712-912l-58 56q50 50 78 115.5T760-600q0 74-28 139t-78 115l58 56ZM400-500q42 0 71-29.5t29-70.5q0-42-29-71t-71-29q-42 0-71 29t-29 71q0 41 29 70.5t71 29.5Z" />
+          <path
+            class="mic-error hidden"
+            d="M400-400q-50 0-85-35t-35-85v-240q0-50 35-85t85-35q50 0 85 35t35 85v240q0 50-35 85t-85 35Zm0-80q17 0 28.5-11.5T440-520v-240q0-17-11.5-28.5T400-800q-17 0-28.5 11.5T360-760v240q0 17 11.5 28.5T400-480Zm40 360h-80v-123q-104-14-172-93t-68-184h80q0 83 58.5 141.5T400-320q11 0 20.5-1t19.5-3v204Zm240-40q8 0 14-6t6-14q0-8-6-14t-14-6q-8 0-14 6t-6 14q0 8 6 14t14 6Zm-20-80h40v-160h-40v160Zm20 160q-83 0-141.5-58.5T480-280q0-83 58.5-141.5T680-480q83 0 141.5 58.5T880-280q0 83-58.5 141.5T680-80ZM400-640Z" />
+          <path
+            class="mic visible"
             d="M480-400q-50 0-85-35t-35-85v-240q0-50 35-85t85-35q50 0 85 35t35 85v240q0 50-35 85t-85 35Zm0-240Zm-40 520v-123q-104-14-172-93t-68-184h80q0 83 58.5 141.5T480-320q83 0 141.5-58.5T680-520h80q0 105-68 184t-172 93v123h-80Zm40-360q17 0 28.5-11.5T520-520v-240q0-17-11.5-28.5T480-800q-17 0-28.5 11.5T440-760v240q0 17 11.5 28.5T480-480Z" />
-          <line
-            x1="0"
-            x2="960"
-            y1="0"
-            y2="-960"
-            class="z-3 hidden stroke-rose-500 relative"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-width="70" />
         </svg>
       </div>
-      <p>Text will appear here</p>
+      <div
+        dir="auto"
+        class="content w-full overflow-y-auto *:[p]:bg-pink-50 *:[p]:rounded-lg space-y-3 text-xl">
+        <p class="text-xl">Text will appear here</p>
+      </div>
       <div class="err hidden">
         Sorry, It seems like SpeechRecognition API does not work in your
         browser, please use a modern browser like Chrome on your desktop.
